--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "@vitejs/plugin-vue": "3.0.0-beta.0",
+    "typescript": "^4.7.4",
+    "vite": "3.0.0-beta.2",
+    "vue-tsc": "^0.38.1"
   }
 }
