--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "3.0.0-beta.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "vite": "3.0.0-beta.2",
     "vue-tsc": "^0.38.1"
