--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es-ui",
+  "name": "ensemble-stars",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -11,6 +11,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "3.0.0-beta.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
