--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "3.0.0-beta.0",
     "prettier": "^2.7.1",
