chore: type declaration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "declaration": true,
     "skipLibCheck": true,
     "baseUrl": "./",
     "paths": {
