--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "ensemble-stars",
-  "private": true,
   "version": "0.0.0",
+  "main": "dist/es-ui.umd.js",
+  "module": "dist/es-ui.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/es-ui.es.js",
+      "require": "./dist/es-ui.umd.js"
+    }
+  },
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -23,7 +31,11 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
+    "vite-plugin-dts": "^1.2.0",
     "vitest": "^0.16.0",
     "vue-tsc": "^0.38.1"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
