--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "happy-dom": "^5.3.2",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
     "vite-plugin-dts": "^1.2.0",
