--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     ".": {
       "import": "./dist/es-ui.es.js",
       "require": "./dist/es-ui.umd.js"
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
   "files": [
     "dist"
@@ -15,8 +16,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build && npm run type",
     "preview": "vite preview",
+    "type": "node ./src/scripts/import-type.js",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
