--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "happy-dom": "^5.3.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "rollup-plugin-delete": "^2.0.0",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4",
