--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "es-ui",
   "version": "0.0.1",
-  "description": "An EnsembleStars Style UI Components Library built on Vue3",
+  "description": "An EnsembleStars Style UI Component Library built on Vue3",
   "license": "MIT",
   "main": "dist/es-ui.umd.js",
   "module": "dist/es-ui.es.js",
