--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "test": "vitest",
     "test:once": "vitest run",
     "coverage": "vitest run --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "docs": "vitepress dev src/docs",
     "docs:build": "vitepress build src/docs",
     "docs:serve": "vitepress serve src/docs"
   },
   "lint-staged": {
-    "src/components/**/*.{js,jsx,ts,tsx,vue}": [
+    "src/**/*.{js,jsx,ts,tsx,vue,md}": [
+      "eslint --fix",
       "prettier --write"
     ]
   },
@@ -42,9 +45,14 @@
     "@testing-library/vue": "^6.6.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^9.1.1",
     "happy-dom": "^5.3.2",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
