--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,9 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "es-ui/*": ["src/packages/*"]
+      "es-ui": ["src/packages"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx", "./**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
