chore: update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
   "rules": {
     // The core 'no-unused-vars' rules (in the eslint:recommeded ruleset)
     // does not work with type definitions
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "vue/multi-word-component-names": "off",
+    "vue/no-reserved-component-names": "off"
   }
 }
