--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "pnpm run clean && vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "clean": "rimraf dist",
     "test": "vitest",
     "test:once": "vitest run",
     "coverage": "vitest run --coverage",
@@ -58,6 +59,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "rollup-plugin-delete": "^2.0.0",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
