--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
+    "tsx": "^3.7.1",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
     "vite-plugin-dts": "^1.2.0",
