chore: remove volar.d.ts from tsconfig.include

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "es-ui": ["src/packages"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "volar.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
